work in progress, modified few components, added new components

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Times New Roman", Times, serif !important;
   background: linear-gradient(135deg, #f0f8ff, #e6f7ff);
   color: #333;
 }
