--- a/src/css/Workout.css
+++ b/src/css/Workout.css
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 5%;
+    padding: 1em;
 }
 
 .workout-overlay {
