--- a/src/css/RegisterUser.css
+++ b/src/css/RegisterUser.css
@@ -5,7 +5,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 5%;
 }
 
 .register-overlay {
@@ -74,7 +73,7 @@
     font-weight: 500;
     text-align: center;
     margin-top: 8px;
-    color: #495057;
+    color: #fff;
 }
 
 .trainer-card {
@@ -118,9 +117,11 @@
 
 .package-card:hover {
     border-color: #007bff;
+    background: #6c757d;
 }
 
 .package-card.selected {
     border-color: #007bff;
-    background-color: #f8f9fa;
+    background-color: #434547;
+    color: #fff;
 }
